logs/turtlesim/build.make.072.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:226:47: error: ‘radius’ was not declared in this scope
       path_painter.drawEllipse(pos_ * meter_, radius, radius);
                                               ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:226:47: note: suggested alternative: ‘rmdir’
       path_painter.drawEllipse(pos_ * meter_, radius, radius);
                                               ^~~~~~
                                               rmdir
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
